# scrapai-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  Dockerfile  Makefile  README.md  RULES.md  SECURITY.md  crawl-new.sh  crawl-stats.sh  docker-compose.airflow.yml  docker-compose.prod.yml  middlewares.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
api/: config.py  deps.py  main.py
apps/: README.md
cli/: __init__.py  analyze.py  apikey.py  crawl.py  db.py  inspect_cmd.py  queue.py  spiders.py
core/: db.py  extractors.py  models.py  schemas.py
docs/: API.md  FEATURES.md  JOURNEYS.md  callbacks.md  deployment.md  development.md  joinremotes-scrapai-flow.html  joinremotes.md  troubleshooting.md  workers-runbook.md
handlers/: cloudflare_handler.py  curl_cffi_handler.py
scripts/: check_requirements.py  export-openapi.py  generate-lockfile.bat  generate-lockfile.sh
services/: __init__.py  analyzer_service.py  auth_service.py  crawl_service.py  inspector_service.py  rate_limit_service.py  redis_config.py  results_service.py  scrape_service.py  spider_analysis_service.py  spider_import_service.py  spider_service.py  webhook_service.py
spiders/: __init__.py  base.py  database_spider.py  sitemap_spider.py
templates/: spider-jobs-listing.json  spider-jobs.json
tests/: conftest.py  test_api.py  test_api_foundations.py
utils/: cf_browser.py  inspector.py  secret_redaction.py  url_validation.py
workers/: __init__.py  crawl_worker.py  webhook_worker.py  worker.py
(+36 files in other folders)
