[tool.uv]
package = true

[tool.setuptools]
py-modules = ["run"]

[project]
name = "scrapai-cli"
version = "0.1.0"
description = "Project-based Scrapy spider management with API tooling"
requires-python = ">=3.11"
dependencies = [
  "scrapy>=2.11.0",
  "scrapy-deltafetch>=2.0.0",
  "beautifulsoup4>=4.11.0",
  "lxml>=4.9.0",
  "python-dotenv>=1.0.0",
  "playwright==1.56.0",
  "python-dateutil>=2.8.2",
  "newspaper4k",
  "sqlalchemy",
  "psycopg2-binary",
  "trafilatura",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "email-validator>=2.0.0",
  "alembic",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "cloakbrowser>=0.1.0",
  "aiohttp",
  "click>=8.0.0",
  "boto3>=1.34.0",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "slowapi>=0.1.9",
  "redis>=5.0.0",
  "dramatiq[redis]>=1.15.0",
  "curl_cffi>=0.14.0",
]

[project.scripts]
scrapai = "run:scrapai_cli"
api = "run:api"
workers = "run:workers"

[dependency-groups]
dev = [
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "black>=25.0.0",
  "isort>=6.0.0",
  "flake8>=7.0.0",
  "bandit>=1.8.0",
  "hypothesis>=6.155.7",
  "pytest-asyncio>=1.4.0",
  "pytest-mock>=3.15.1",
  "pytest-benchmark>=5.2.3",
]
